--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,6 +11,7 @@
 <% include ../partials/rules.ejs %>
 <% include ../partials/theme.ejs %>
 <% include ../partials/register.ejs %>
+<% include ../partials/teams.ejs%>
 <% include ../partials/discuss.ejs%>
 </body>
 </html>
