--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -26,6 +26,10 @@
                 <a href="#discuss">Discuss</a>
             </li>
 
+<!--            <li>
+                <a href="#teams">Teams</a>
+            </li>-->
+
         </ul>
 
         <ul class="nav navbar-nav navbar-right f18 ">
