--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -32,7 +32,8 @@
                             champs if you're 4 in size. But there is no hard-rule in how you want to spread your team.
                         </li>
                         <li id="sec-office-stay">
-                            Also it is mandatory for team to stay in office during the Knockathon event till Saturday's Presentation. Ladies who are
+                            Also it is mandatory for team to stay in office during the Knockathon event till Saturday's
+                            Presentation. Ladies who are
                             willing stay in office during night are welcome. But if they prefer to hack from home, that
                             is fine too.
                         </li>
@@ -44,7 +45,8 @@
                     <ul>
                         <li>
                             As highlighted in <a href="#register-now">register now</a> section you should first of all
-                            have a team and team members identified before the registration opens. This means you'll have to register your teams as new Organizations on tryexzeo.com.
+                            have a team and team members identified before the registration opens. This means you'll
+                            have to register your teams as new Organizations on tryexzeo.com.
                         </li>
                         <li>
                             Once the registration desk opens on Friday, 11th Sep at 6:30 PM, you and your team
@@ -62,16 +64,19 @@
                     <h2 class="medium">Rejection Criteria</h2>
                     <ul>
                         <li>
-                            Knockathon starts on Friday, 11th Sep at 6:30 PM and ends on Saturday at 11:59 PM (mid-night). Any code
+                            Knockathon starts on Friday, 11th Sep at 6:30 PM and ends on Saturday at 11:59 PM
+                            (mid-night). Any code
                             committed into your Github repo after 11.59 Saturday will be rejected for your final build.
                             But there can be extreme cases. You may want to find legitimate reasons to convince
                             Knockathon team.
                         </li>
                         <li>
-                            During the concept demo on Saturday Morning, we merely look for some scribbled designs on a paper. Don't waste
+                            During the concept demo on Saturday Morning, we merely look for some scribbled designs on a
+                            paper. Don't waste
                             your time on making PPT or some neat design. However, if you don't have any solid idea, you
                             can also provide the options you have in front you. <p><br/>In case, your idea collides with
-                                someone's or a rip-off of some well-known app it will be rejected or advised to change.</p>
+                                someone's or a rip-off of some well-known app it will be rejected or advised to change.
+                            </p>
                         </li>
                         <li>
                             During the event, it is mandatory for team members (<a href="#sec-office-stay">except for
@@ -86,7 +91,8 @@
                         <li>
                             There will be three presentations &ndash;
                             <ul>
-                                <li><strong>Idea Presentation</strong> &ndash; An hour after registration. This is going to be a very quick, punch
+                                <li><strong>Idea Presentation</strong> &ndash; An hour after registration. This is going
+                                    to be a very quick, punch
                                     line presentation on your idea to other teams. This presentation is to avoid
                                     confusions among other teams if they ended up thinking the same idea as of yours.
                                 </li>
@@ -100,7 +106,8 @@
                                     <strong>Demo Day</strong> &ndash; You will demo your app / product on Monday the
                                     14th Sep in front of all our colleagues. And they are going to vote to show their
                                     love.
-                                    Note: Audience vote accounts for 30% of the total score. The Voting will be anonymous.
+                                    Note: Audience vote accounts for 30% of the total score. The Voting will be
+                                    anonymous.
                                 </li>
                             </ul>
                         </li>
@@ -110,6 +117,7 @@
 
                 <div id="schedule-timelines" class="col-md-8 col-md-offset-0 list">
                     <h2 class="medium">Schedule &amp; Timelines</h2>
+                    <br/>
                     <table class="table table-striped" style="font-size: 14px!important;">
                         <tr>
                             <th>Day</th>
