Team Lsiting UI with integration done

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,7 @@
 <% include ../partials/rules.ejs %>
 <% include ../partials/theme.ejs %>
 <% include ../partials/register.ejs %>
-<% include ../partials/teams.ejs%>
+<!--<% include ../partials/teams.htm%>-->
 <% include ../partials/discuss.ejs%>
 </body>
 </html>
