status filter for completed added

--- a/views/partials/teams.htm
+++ b/views/partials/teams.htm
@@ -48,6 +48,9 @@
                                              <div ng-switch-when="confirm">
                                                 <small class="bg-info all-pd-2 text-shadow">Invited, and joined</small>
                                             </div>
+                                             <div ng-switch-when="Complete">
+                                                <small class="bg-info all-pd-2 text-shadow">Invited, and joined</small>
+                                            </div>
                                              <div ng-switch-when="Accepted">
                                                 <small class="bg-info all-pd-2 text-shadow">Invited, and joined</small>
                                             </div>
