Name repeat bug fixed

--- a/views/partials/teams.htm
+++ b/views/partials/teams.htm
@@ -25,7 +25,7 @@
                     <div class="panel-body">
 
                         <ul class="media-list">
-                            <li class="media" ng-repeat="user in team.users">
+                            <li class="media" ng-repeat="user in team.users | unique: 'name'">
                                 <div class="media-left">
                                     <a href="#">
                                         <div ng-if="user.profile_image === null">    
