--- a/views/partials/teams.ejs
+++ b/views/partials/teams.ejs
@@ -1,76 +1,119 @@
-<!--
-<div class="container-fluid border border-gray"></div>
-<div class="container-fluid bg-gray teams">
-    <div class="container">
+<!DOCTYPE html>
+<html>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<body>
 
-        <div class="row">
-            <div class="col-md-offset-0 pd-5">
-                <h1 id="teams" class="text-shadow huge">Knockathon Teams</h1>
+<div ng-app="teamApp" ng-controller="teamController">
+    <div class="container-fluid border border-gray"></div>
+    <div class="container-fluid bg-gray teams">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-md-offset-0 pd-5">
+                    <h1 id="teams" class="text-shadow huge">Knockathon Teams</h1>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-offset-0 pd-5 tk-anisette-petite">
+                    <p>
+                        Here are the current status of teams participating in Knockathon, we don't see your name
+                        yet? Isn't that sad.
+                    </p>
+
+                    <p>
+                        <a href="#register-now">Register now</a>, you may not have slots in teams as they are limited.
+                    </p>
+                </div>
+            </div>
+
+            <div clas="row">
+                <div class="col-md-4 mt-15 tk-anisette-petite" ng-repeat="team in teams | unique: 'name'">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><strong>{{ team.name }}</strong></h3>
+                        </div>
+                        <div class="panel-body">
+
+                            <ul class="media-list">
+                                <li class="media" ng-repeat="user in team.users | unique: 'name'">
+                                    <div class="media-left">
+                                        <a href="#">
+                                            <div ng-if="user.profile_image === null">
+                                                <img class="media-object"
+                                                     src="https://s3.amazonaws.com/assets.tryexzeo.com/images/default_user.png"
+                                                     alt="...">
+                                            </div>
+                                            <div ng-if="user.profile_image !== null">
+                                                <img class="media-object"
+                                                     ng-src="https://static.tryexzeo.com/usr/i/up/145092/29/{{user.profile_image}}"
+                                                     alt="...">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="media-body">
+                                        <h5 class="media-heading"><strong>{{ user.name }}</strong></h5>
+
+                                        <div ng-switch on="user.Status">
+                                            <div ng-switch-when="RequestWithdrawn">
+                                                <small class="bg-danger all-pd-2 text-shadow">Interested, but rejected
+                                                </small>
+                                            </div>
+                                            <div ng-switch-when="Rejected">
+                                                <small class="bg-danger all-pd-2 text-shadow">Interested, but rejected
+                                                </small>
+                                            </div>
+                                            <div ng-switch-when="confirm">
+                                                <small class="bg-success all-pd-2 text-shadow">Invited, and joined
+                                                </small>
+                                            </div>
+                                            <div ng-switch-when="Complete">
+                                                <small class="bg-success all-pd-2 text-shadow">Invited, and joined
+                                                </small>
+                                            </div>
+                                            <div ng-switch-when="Accepted">
+                                                <small class="bg-success all-pd-2 text-shadow">Invited, and joined
+                                                </small>
+                                            </div>
+                                            <div ng-switch-default>
+                                                <small class="bg-info all-pd-2 text-shadow">Invited</small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div clas="row">
-            <div class="col-md-4 mt-15">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">knockathon-marvel</h3>
-                    </div>
-                    <div class="panel-body">
-
-                        <ul class="media-list">
-                            <li class="media">
-                                <div class="media-left">
-                                    <a href="#">
-                                        <img class="media-object" src="https://s3.amazonaws.com/assets.tryexzeo.com/images/default_user.png" alt="...">
-                                    </a>
-                                </div>
-                                <div class="media-body">
-                                    <h5 class="media-heading">Rajesh Khanna</h5>
-                                    <small class="bg-info all-pd-2 text-shadow">Invited</small>
-                                </div>
-                            </li>
-
-                            <li class="media">
-                                <div class="media-left">
-                                    <a href="#">
-                                        <img class="media-object" src="https://s3.amazonaws.com/assets.tryexzeo.com/images/default_user.png" alt="...">
-                                    </a>
-                                </div>
-                                <div class="media-body mt-15">
-                                    <h5 class="media-heading">Kokki Kumar</h5>
-                                    <small class="bg-success all-pd-2 text-shadow">Invited, and joined</small>
-                                </div>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mt-15">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">knockathon-pandavs</h3>
-                    </div>
-                    <div class="panel-body">
-                        Panel content
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mt-15">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">knockathon-eagles</h3>
-                    </div>
-                    <div class="panel-body">
-                        Panel content
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
     </div>
+
 </div>
--->
+
+<script>
+    var app = angular.module('teamApp', []);
+    app.controller('teamController', function ($scope, $http) {
+        $http.get("https://teams.tryexzeo.com/knockathon/teams")
+                .success(function (response) {
+                    $scope.teams = response;
+                })
+    });
+    app.filter('unique', function () {
+        return function (collection, keyname) {
+            var output = [],
+                    keys = [];
+            angular.forEach(collection, function (item) {
+                var key = item[keyname];
+                if (keys.indexOf(key) === -1) {
+                    keys.push(key);
+                    output.push(item);
+                }
+            });
+            return output;
+        };
+    });
+</script>
+
+</body>
+</html>
